--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.13.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +53,7 @@
     "lucide-react": "^0.462.0",
     "mysql2": "^3.13.0",
     "next": "^15.2.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "prisma": "^6.5.0",
     "react": "^18.3.1",
