feat(forgot-password): + send by email

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -55,6 +56,7 @@
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.5.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
