--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -53,6 +53,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^10.18.0",
     "input-otp": "^1.2.4",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "mysql2": "^3.13.0",
@@ -60,7 +61,6 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
-    "prisma": "^6.5.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -91,6 +91,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1"
